--- a/css/styles.css
+++ b/css/styles.css
@@ -620,7 +620,15 @@ main {
   width: calc(100% - 2.94rem); }
   @media only screen and (max-width: 767px) {
     .inner-width {
-      width: calc(100% - 30px); } }
+      width: calc(100% - 1.5rem); } }
+
+@media only screen and (max-width: 767px) {
+  .inner-width-mobile {
+    width: calc(100% - 1.5rem); } }
+
+@media only screen and (min-width: 767px) {
+  .inner-width-desktop {
+    width: calc(100% - 2.94rem); } }
 
 .row.center {
   align-items: center;
@@ -654,13 +662,21 @@ main {
   .newsletter-button:hover {
     border-bottom: .01em solid #000000; }
 
-@media only screen and (max-width: 600px) {
-  .mobile-display-none {
-    display: none; } }
+@media only screen and (max-width: 800px) {
+  .mobile-flex-column {
+    flex-direction: column; } }
 
 @media only screen and (max-width: 600px) {
+  .mobile-display-none {
+    display: none; }
   .mobile-bordertop {
-    border-top: 1px solid #000000; } }
+    border-top: 1px solid #000000; }
+  .mobile-borderbottom {
+    border-bottom: 1px solid #000000; } }
+
+@media only screen and (max-width: 800px) {
+  .three-images .row .column:nth-child(2) {
+    order: -1; } }
 
 /* Product Grid
          ========================================================================== */
@@ -717,7 +733,7 @@ main {
     padding-top: 1em; }
     @media only screen and (max-width: 600px) {
       .blog-grid .row .column {
-        padding: 0 0 1em 0; } }
+        padding: 1em 0 1em 0; } }
     .blog-grid .row .column .title {
       text-transform: lowercase;
       font-variant-caps: small-caps;
@@ -928,16 +944,24 @@ footer #contentinfo {
   padding: 1.09rem 0 5.44rem 0; }
   footer #contentinfo ul {
     justify-content: center; }
+    footer #contentinfo ul#internal-links li {
+      margin: auto; }
+    footer #contentinfo ul#copyright li:nth-child(1) {
+      margin-right: 0.3em; }
+    footer #contentinfo ul#copyright li:nth-child(2) {
+      margin-left: 0.3em;
+      margin-right: auto; }
     footer #contentinfo ul li {
       flex: 0 0 auto; }
+      footer #contentinfo ul li:nth-child(1) {
+        margin-right: 0.3em; }
+      footer #contentinfo ul li:nth-child(2) {
+        margin: 0; }
+      footer #contentinfo ul li:nth-child(3) {
+        margin-left: 0.3em; }
       @media screen and (max-width: 800px) {
         footer #contentinfo ul li:nth-child(1), footer #contentinfo ul li:nth-child(2), footer #contentinfo ul li:nth-child(3) {
-          width: 100%;
-          text-align: center;
-          margin: 0; } }
-  footer #contentinfo ul#contact li,
-  footer #contentinfo ul#copyright li {
-    margin: auto; }
+          margin: auto !important; } }
   footer #contentinfo span {
     text-transform: lowercase;
     font-variant-caps: small-caps;
@@ -955,12 +979,18 @@ section h2 {
 section.blockquote {
   padding: 7.35rem 0;
   max-width: 23.529rem; }
+  @media screen and (max-width: 800px) {
+    section.blockquote {
+      padding: 3rem 0; } }
   section.blockquote h2 {
     padding-bottom: 1em; }
 
 section .square {
   padding: 7.35rem 0;
   max-width: 17.647rem; }
+  @media screen and (max-width: 800px) {
+    section .square {
+      padding: 1.5rem 0; } }
 
 section h2 {
   padding-bottom: 1em; }
