--- a/css/styles.css
+++ b/css/styles.css
@@ -666,6 +666,10 @@ main {
   .mobile-flex-column {
     flex-direction: column; } }
 
+@media only screen and (min-width: 601px) {
+  .desktop-display-none {
+    display: none; } }
+
 @media only screen and (max-width: 600px) {
   .mobile-display-none {
     display: none; }
@@ -677,6 +681,9 @@ main {
 @media only screen and (max-width: 800px) {
   .three-images .row .column:nth-child(2) {
     order: -1; } }
+
+.three-images .img-white-border {
+  border: 1.5rem solid #ffffff; }
 
 /* Product Grid
          ========================================================================== */
