--- a/css/styles.scss
+++ b/css/styles.scss
@@ -775,6 +775,11 @@
           flex-direction: column;
         }
       }
+      @media only screen and (min-width: 601px) {
+        .desktop-display-none {
+          display: none;
+        }
+      }
       @media only screen and (max-width: 600px) {
         .mobile-display-none {
           display: none;
@@ -788,13 +793,17 @@
       }
 
       .three-images {
-  
+
         @media only screen and (max-width: 800px) {
           .row {
             .column:nth-child(2) {
               order: -1;
             }
           }
+        }
+
+        .img-white-border {
+          border: 1.5rem solid #ffffff;
         }
       }
       /* Product Grid
