update: nav preent on all pages

--- a/css/styles.css
+++ b/css/styles.css
@@ -760,7 +760,8 @@ header {
   width: 100%;
   top: 0;
   left: 0;
-  z-index: 999; }
+  z-index: 999;
+  background-color: #ffffff; }
   @media only screen and (min-width: 1280px) {
     header {
       padding: 1.5em 0; } }
