--- a/css/styles.scss
+++ b/css/styles.scss
@@ -910,6 +910,7 @@
         top: 0;
         left: 0;
         z-index: 999;
+        background-color: #ffffff;
         @media only screen and (max-width: 1280px) {
           // min-height: 83.03px;
         }
