update: newsletter mobile toggle working

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -106,9 +106,9 @@
   nav a:hover,
   nav a:focus,
   nav li:hover {
-  	color: #000000;
-  	background-color: #fff;
-    opacity: 0.4;
+  	// color: #000000;
+  	// background-color: #fff;
+    // opacity: 0.4;
     border: none;
   }
 
