update: careers mobile styles

--- a/css/styles.css
+++ b/css/styles.css
@@ -624,7 +624,8 @@ main {
 
 @media only screen and (max-width: 767px) {
   .inner-width-mobile {
-    width: calc(100% - 1.5rem); } }
+    width: calc(100% - 1.5rem);
+    flex-basis: auto; } }
 
 @media only screen and (min-width: 767px) {
   .inner-width-desktop {
@@ -1115,6 +1116,8 @@ section h3 {
       padding-bottom: 1em; }
     .terms .row .title, .privacy .row .title, .careers .row .title {
       padding-right: 1.3em; }
+  .terms .job, .privacy .job, .careers .job {
+    text-align: center; }
 
 /* Animations
            ========================================================================== */
