update: revison 2 complete

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -673,7 +673,7 @@
         padding-bottom: 0.7rem;
       }
       @media screen and (min-width: 1281px) {
-            padding-top: 2.8rem;
+            padding-top: 2.4rem;
       }
       @media screen and (max-width: 1280px) {
         min-height: calc(100vh - 5.47rem);
@@ -858,8 +858,9 @@
               padding: 1em 0 1em 0;
             }
             img {
-              width: 90%;
+              width: 80%;
               margin: 0 auto;
+              padding-bottom: 0.5em;
               @media only screen and (min-width: 601px) {
                 display: block;
               }
@@ -901,10 +902,9 @@
           display: grid;
           grid-template-columns: repeat(auto-fill, minmax(25%, 1fr));
 
-          @media only screen and (max-width: 1100px) {
+          @media only screen and (max-width: 800px) {
               grid-template-columns: repeat(auto-fill, minmax(50%, 1fr));
           }
-
           @media only screen and (max-width: 600px) {
               grid-template-columns: repeat(auto-fill, minmax(100%, 1fr));
           }
@@ -949,12 +949,6 @@
         left: 0;
         z-index: 999;
         background-color: #ffffff;
-        @media only screen and (max-width: 1280px) {
-          // min-height: 83.03px;
-        }
-        @media only screen and (min-width: 1280px) {
-          padding: 1.5em 0;
-        }
         // &.hideOnScroll {
         //     -webkit-transform: translateY(-81px);
         //     transform: translateY(-81px);
@@ -978,7 +972,7 @@
       }
       nav ul {
         font-family: 'Garamond Premr Pro';
-        letter-spacing: 0.12em;
+        letter-spacing: 0.1em;
         position: relative;
         font-variant-caps: small-caps;
         font-variant: small-caps;
@@ -1057,6 +1051,9 @@
                 font-size: 0.471rem;
                 background-color: #ffffff;
                 padding: 2.3125em;
+                @media only screen and (min-width: 1600px) {
+                    max-width: 544px;
+                }
                 @media only screen and (max-width: 600px) {
                     min-width: 93vw;
                 }
@@ -1192,6 +1189,7 @@
             .small {
               font-size: 0.385rem;
               font-family: 'Robinsons Gothic Regular';
+              letter-spacing: 0.15em;
             }
           }
 
@@ -1263,6 +1261,33 @@
         h2 {
           text-align: center;
         }
+        #logos {
+          padding-bottom: 0.794rem;
+          // border-bottom: 1px solid #000000;
+          .column {
+            max-width: 4.85rem;
+            letter-spacing: 0.106rem;
+
+            &#thistle{
+              margin-right: 0.2em;
+              flex-basis: auto;
+
+            }
+            &#lighthouse {
+              margin-left: 0.2em;
+              flex-basis: auto;
+            }
+          }
+          img {
+            max-width: 1.676rem;
+            padding-bottom: 0.441rem;
+          }
+          .small {
+            font-size: 0.385rem;
+            font-family: 'Robinsons Gothic Regular';
+            letter-spacing: 0.15em;
+          }
+        }
       }
       section.blockquote {
         padding: 7.35rem 0;
@@ -1280,8 +1305,14 @@
             padding: 7.35rem 0;
             max-width: 17.647rem;
             text-align-last: center;
+            text-align: justify;
+            -moz-text-align-last: center; 
             @media screen and (max-width: 800px) {
               padding: 1.5rem 0;
+            }
+
+            h3.small-caps {
+              letter-spacing: 0.1em;
             }
           }
 
@@ -1315,6 +1346,9 @@
           background: transparent;
           @media screen and (max-width: 800px) {
               font-size: 18vw;
+          }
+          @media screen and (min-width: 1600px) {
+            font-size: calc(3.117 * 2.65vw);
           }
         }
 
