--- a/css/styles.css
+++ b/css/styles.css
@@ -589,7 +589,7 @@ main {
       padding-bottom: 0.7rem; } }
   @media screen and (min-width: 1281px) {
     main {
-      padding-top: 2.8rem; } }
+      padding-top: 2.4rem; } }
   @media screen and (max-width: 1280px) {
     main {
       min-height: calc(100vh - 5.47rem); } }
@@ -729,8 +729,9 @@ main {
       .product-grid .row .column {
         padding: 1em 0 1em 0; } }
     .product-grid .row .column img {
-      width: 90%;
-      margin: 0 auto; }
+      width: 80%;
+      margin: 0 auto;
+      padding-bottom: 0.5em; }
       @media only screen and (min-width: 601px) {
         .product-grid .row .column img {
           display: block; } }
@@ -760,7 +761,7 @@ main {
 .blog-grid .row {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(25%, 1fr)); }
-  @media only screen and (max-width: 1100px) {
+  @media only screen and (max-width: 800px) {
     .blog-grid .row {
       grid-template-columns: repeat(auto-fill, minmax(50%, 1fr)); } }
   @media only screen and (max-width: 600px) {
@@ -796,13 +797,10 @@ header {
   left: 0;
   z-index: 999;
   background-color: #ffffff; }
-  @media only screen and (min-width: 1280px) {
-    header {
-      padding: 1.5em 0; } }
 
 nav ul {
   font-family: 'Garamond Premr Pro';
-  letter-spacing: 0.12em;
+  letter-spacing: 0.1em;
   position: relative;
   font-variant-caps: small-caps;
   font-variant: small-caps; }
@@ -871,6 +869,9 @@ nav ul {
     font-size: 0.471rem;
     background-color: #ffffff;
     padding: 2.3125em; }
+    @media only screen and (min-width: 1600px) {
+      #overlay form {
+        max-width: 544px; } }
     @media only screen and (max-width: 600px) {
       #overlay form {
         min-width: 93vw; } }
@@ -980,7 +981,8 @@ footer #logos {
     padding-bottom: 0.441rem; }
   footer #logos .small {
     font-size: 0.385rem;
-    font-family: 'Robinsons Gothic Regular'; }
+    font-family: 'Robinsons Gothic Regular';
+    letter-spacing: 0.15em; }
 
 footer #contentinfo {
   padding: 1.09rem 0 2.72rem 0; }
@@ -1020,6 +1022,25 @@ footer #contentinfo {
 section h2 {
   text-align: center; }
 
+section #logos {
+  padding-bottom: 0.794rem; }
+  section #logos .column {
+    max-width: 4.85rem;
+    letter-spacing: 0.106rem; }
+    section #logos .column#thistle {
+      margin-right: 0.2em;
+      flex-basis: auto; }
+    section #logos .column#lighthouse {
+      margin-left: 0.2em;
+      flex-basis: auto; }
+  section #logos img {
+    max-width: 1.676rem;
+    padding-bottom: 0.441rem; }
+  section #logos .small {
+    font-size: 0.385rem;
+    font-family: 'Robinsons Gothic Regular';
+    letter-spacing: 0.15em; }
+
 section.blockquote {
   padding: 7.35rem 0;
   max-width: 23.529rem; }
@@ -1032,10 +1053,14 @@ section.blockquote {
 section .square {
   padding: 7.35rem 0;
   max-width: 17.647rem;
-  text-align-last: center; }
+  text-align-last: center;
+  text-align: justify;
+  -moz-text-align-last: center; }
   @media screen and (max-width: 800px) {
     section .square {
       padding: 1.5rem 0; } }
+  section .square h3.small-caps {
+    letter-spacing: 0.1em; }
 
 section h2 {
   padding-bottom: 1em; }
@@ -1064,6 +1089,9 @@ section h3 {
     @media screen and (max-width: 800px) {
       #logo h1 {
         font-size: 18vw; } }
+    @media screen and (min-width: 1600px) {
+      #logo h1 {
+        font-size: calc(3.117 * 2.65vw); } }
   #logo .hero-text {
     background: transparent;
     text-align: center;
