--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1457,7 +1457,7 @@
         /* Terms, Privacy, Careers - Indexed Layout
            ========================================================================== */
 
-          .terms, .privacy, .careers, .age-gate {
+          .terms, .privacy, .careers {
             max-width: 24.55rem;
           }
            .terms, .privacy, .careers, .shop {
@@ -1491,7 +1491,13 @@
             text-align: center;
             margin-bottom: 2em;
             border: 1px solid;
-
+            cursor: pointer;
+            width: 100%;
+            text-align: center;
+            text-align-last: center;
+            @media screen and (max-width: 600px) {
+              margin-bottom: 1em;
+            }
             &.black {
               border-color: #ffffff;
 
@@ -1508,6 +1514,10 @@
           text-transform: uppercase;
           padding: 1em;
           margin-bottom: 2em;
+          cursor: pointer;
+          @media screen and (max-width: 600px) {
+            margin-bottom: 1em;
+          }
 
           &.black {
             border-color: #ffffff;
@@ -1532,20 +1542,52 @@
           background-color: #000000;
           overflow-y: auto;
           color: #ffffff;
-          position: relative;
 
           * {
             font-family: 'Garamond Premr Pro';
           }
 
+          #birthdate {
+            justify-content: space-between;
+
+            > div:nth-child(1) {
+              padding-right: 9px;
+            }
+            > div:nth-child(2) {
+              padding-left: 6px;
+              padding-right: 6px;
+            }
+            > div:nth-child(3) {
+              padding-left: 9px;
+            }
+            @media screen and (max-width: 800px) {
+              > div {
+                padding-right: 0 !important;
+                padding-left: 0 !important;
+              }
+            }
+
+            #bmonth,
+            #bday,
+            #byear {
+              font-variant-caps: small-caps;
+              font-variant: small-caps;
+            }
+          }
+
           .age-gate {
-            max-height: 300px;
+            max-height: fit-content;
+            max-width: 435px;
             position: absolute;
             left: 0;
             right: 0;
             bottom: 0;
             top: 0;
             margin: auto;
+            @media screen and (max-width: 600px) {
+              max-height: fit-content;
+              max-width: 300px;
+            }
           }
           h1, p {
             text-align: center;
